# ai-chat

./: .gitignore  CLAUDE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  Makefile  README.md  README_DEPLOYMENT.md  SETUP_GUIDE.md  TEST.md  TODO.md  pyproject.toml  vercel.json
api/: .env.example  __init__.py  check_models.py  check_quota_limits.py  config.py  index.py  list_models.py  pytest.ini  requirements.txt  test_api_error.py  test_flash_lite.py
api/models/: message.py  thread.py
api/routes/: messages.py  threads.py
api/services/: db_service.py  gemini_service.py
api/tests/: README.md  conftest.py  test_api.py
frontend/: .env.example  .env.production  .gitignore  package-lock.json  package.json  playwright.config.js
frontend/src/: App.vue
frontend/src/components/: ChatInput.vue  ChatMessage.vue  CodeBlock.vue  MarkdownRenderer.vue  ThreadList.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: messageStore.js  threadStore.js
frontend/src/views/: ChatView.vue
frontend/tests/e2e/: 01-initial-display.spec.js  02-thread-management.spec.js  03-message-tests.spec.js  04-markdown-rendering.spec.js  05-integration-flows.spec.js  debug-message.spec.js  debug-network.spec.js
frontend/tests/e2e/helpers/: test-helpers.js
