[project]
name = "ai-chat-api"
version = "1.0.0"
description = "AI Chatbot API with Flask and Gemini"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.0",
    "google-genai>=0.2.0",
    "pytest>=8.4.2",
    "pytest-flask>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-flask>=1.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv]
package = false
